# dib

./: .dockerignore  .gitignore  .prettierignore  Dockerfile.build  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.yml  eslint.config.js  functional-audit.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.graphify/: .graphify_detect.json  GRAPH_REPORT.md  branch.json  graph.json  manifest.json  scope.json  worktree.json
.graphify/cache/: stat-index.json
.graphify/description-instructions/: batch-000.md  batch-001.md  batch-002.md  batch-003.md  batch-004.md  batch-005.md  batch-006.md  batch-007.md  batch-008.md  batch-009.md  batch-010.md
.graphify/label-instructions/: communities.md
.temp/components/: DataGrid.css  QueryHistoryPanel.css  QueryHistoryPanel.tsx  QueryPanel.tsx  RenameDialog.tsx  SchemaVisualizer.css  ShortcutTooltip.css  Sidebar.css  Sidebar.tsx  TableBuilderGrid.css  TableNode.tsx  UnsavedChangesDialog.tsx
docs/: ARCHITECTURE.md
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: build-release.sh
src/: App.css  App.tsx  env.d.ts  main.tsx  monaco-overrides.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  db.rs  ddl.rs  mock.rs  mod.rs  persistence.rs  query.rs  schema.rs  system_status.rs  workspace.rs
src-tauri/src/db/: driver.rs  mod.rs  postgres.rs  sqlite.rs  types.rs
src-tauri/src/storage/: mod.rs
src/components/: CommandPalette.css  CommandPalette.tsx  CommitFooter.css  CommitFooter.tsx  ConnectionManager.css  ConnectionManager.tsx  ContextMenu.css  ContextMenu.tsx  DangerConfirmDialog.css  DangerConfirmDialog.tsx  DataGrid.css  (+54 more)
tools/: generate-knowledge-graph.py
(+90 files in other folders)
