[package]
name = "dib"
version = "0.1.0"
description = "Database Interface Builder"
authors = ["DIB Team"]
edition = "2021"

[lib]
name = "dib_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }
tokio = { version = "1", features = ["sync"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
rfd = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
