[package]
name = "dib"
version = "0.1.0"
description = "Data Illustrative Base"
authors = ["DIB Team"]
edition = "2021"

[lib]
name = "dib_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "json", "rust_decimal"] }
rust_decimal = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
dashmap = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
rfd = "0.14"
fake = { version = "2", features = ["derive"] }
rand = "0.8"
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
